RESOLVED FIXED121721
Shaders that fail to compile should be marked as such
https://bugs.webkit.org/show_bug.cgi?id=121721
Summary Shaders that fail to compile should be marked as such
Dean Jackson
Reported 2013-09-20 14:59:48 PDT
We expect all output from ANGLE to pass compilation via glCompileShader. Currently we have some test cases that still fail compilation. We'll fix that, but in the meantime we should make sure that we do mark uncompilable shaders as an error.
Attachments
Patch (3.16 KB, patch)
2013-09-20 15:09 PDT, Dean Jackson
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2013-09-20 15:00:24 PDT
Dean Jackson
Comment 2 2013-09-20 15:09:02 PDT
Dean Jackson
Comment 3 2013-09-20 15:16:16 PDT
Note You need to log in before you can comment on or make changes to this bug.