Shaders that fail to compile should be marked as such https://bugs.webkit.org/show_bug.cgi?id=121721

Reviewed by Simon Fraser.

1. Add a new logging channel for WebGL.

2. If a translated shader fails to compile (technically
this should never happen), mark it as invalid.

Test: https://www.khronos.org/registry/webgl/sdk/tests/conformance/glsl/misc/shader-with-non-reserved-words.html

* platform/Logging.h: New WebGL channel.
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::compileShader): Log the raw and translated
input to glCompileShader, but mark the entry as invalid.

Canonical link: https://commits.webkit.org/139719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156205 268f45cc-cd09-0410-ab3c-d52691b4dbfc