Source/WebCore/platform/Logging.h
@@ -66,6 +66,7 @@ namespace WebCore {
     M(StorageAPI) \
     M(Threading) \
     M(WebAudio) \
+    M(WebGL) \
 
 #define DECLARE_LOG_CHANNEL(name) \
     extern WTFLogChannel JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, name);
